2010-04-20  Juanma Barranquero  <lekktu@gmail.com>

	* buffer.c (syms_of_buffer) <bidi-display-reordering>: Doc fix.

2010-04-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* data.c (Fmake_variable_buffer_local, Fmake_local_variable):
	Just signal a warning rather than an error when inside a let.
	(Fmake_variable_frame_local): Add the same test.

	* font.c (syms_of_font): Make the style table vars read-only.

	* buffer.h (struct buffer): Remove unused var `direction_reversed'.
	* buffer.c (init_buffer_once, syms_of_buffer): Remove its initialization.

	* bidi.c (bidi_initialize): Simplify fallback_paragraph_*_re init.

2010-04-20  Eli Zaretskii  <eliz@gnu.org>

	Fix R2L paragraph display on TTY.

	* xdisp.c (unproduce_glyphs): New function.
	(display_line): Use it when produced glyphs are discarded from R2L
	glyph rows.
	(append_composite_glyph): In R2L rows, prepend the glyph rather
	than appending it.

	* term.c (append_composite_glyph): In R2L rows, prepend the glyph
	rather than append it.  Set up the resolved_level and bidi_type
	attributes of the appended glyph.
	(produce_special_glyphs): Mirror the backslash continuation
	character in R2L lines.

	Implement display of R2L paragraphs in GUI sessions.

	* xdisp.c [HAVE_WINDOW_SYSTEM]: Add prototype for
	append_stretch_glyph.
	(set_cursor_from_row) <cursor_x>: Remove unused variable.  Fix
	off-by-one error in computing x at end of text in the row.
	(append_stretch_glyph): In reversed row, prepend the glyph rather
	than append it.  Set resolved_level and bidi_type of the glyph.
	(extend_face_to_end_of_line): If the row is reversed, prepend a
	stretch glyph whose width is such that the rightmost glyph will be
	drawn at the right margin of the window.  Fix off-by-one error on
	TTY frames in testing whether a line needs face extension.  Fix
	face extension at ZV.  If this is the last glyph row, use
	DEFAULT_FACE_ID, to avoid painting the rest of the window with the
	region face.